src/MiniJava/Tests/DriverTests/bad_override.mj
class B
{
    public void foo() {}
}
class D extends B
{
    public int foo()
    { return 1; } // should complain about nonmatching override
}
